--- a/Calculator/mainwindow.ui
+++ b/Calculator/mainwindow.ui
@@ -30,7 +30,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>40</y>
+      <y>90</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -40,7 +40,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>70</y>
+      <y>130</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -50,13 +50,49 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>110</y>
+      <y>160</y>
       <width>80</width>
       <height>22</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>=</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>10</y>
+      <width>81</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Calculator</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>50</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Adds two numbers.</string>
     </property>
    </widget>
   </widget>
